# kds-team.processor-json2csv

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bitbucket-pipelines.yml  composer.json  docker-compose.yml
.github/workflows/: ci.yml  push.yml  test.yml
php_backup/src/: ConfigDefinition.php
php_backup/tests/functional/: DatadirTest.php
src/: Component.php  Config.php  ConfigDefinition.php  JsonToCSvParser.php  Processor.php  config.rs  lib.rs  main.rs  parser.rs  parser_test.rs  run.php  test.php
test_data/: config.json
test_data/in/files/: test.json
tests/: functional_tests.rs
tests/functional/basic-sample-2-files/: config.json
tests/functional/basic-sample-2-files/in/files/: sample1.json  sample2.json
tests/functional/basic-sample-2-files/source/: sample1.json  sample2.json
tests/functional/basic-sample-2-tables/: config.json
tests/functional/basic-sample-2-tables-root-el/: config.json
tests/functional/basic-sample-2-tables-root-el/in/files/: sample.json
tests/functional/basic-sample-2-tables-root-el/in/tables/: sample.json
tests/functional/basic-sample-2-tables/source/: sample.json
tests/functional/sample-2-tables-add-file-name/: config.json
tests/functional/sample-2-tables-add-file-name/expected/: root.csv
tests/functional/sample-2-tables-add-file-name/source/: sample.json
tests/functional/sample-2-tables-root-el-mapping/: config.json
tests/functional/sample-2-tables-root-el-mapping/expected/: root.csv
tests/functional/sample-2-tables-root-el-mapping/source/: sample.json
(+3 files in other folders)
