[package]
name = "json2csv_processor"
version = "0.1.0"
edition = "2021"
authors = ["Keboola"]
description = "Keboola Connection processor for JSON to CSV conversion"
license = "MIT"

[[bin]]
name = "processor"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
glob = "0.3"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
rayon = "1.8"

[dev-dependencies]
tempfile = "3.8"
